--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -20,10 +20,10 @@
   </head>
 
   <body class="vh-100">
-    <!-- ---------barre de navigation et titre ---------------------->
+    <!-- barre de navigation et titre -->
     <header class="container-fluid h-25">
       <nav class="row h-100 d-flex justify-content-around">
-        <!---------------- div avec le menu en haut a gauche---------- -->
+        <!-- div avec le menu en haut a gauche -->
         <div
           class="col-xs-15 col-sm-12 col-md-5 col-lg-4 d-flex justify-content-around"
         >
@@ -33,17 +33,18 @@
           <a href="">Author</a>
           <a href="">Portal</a>
         </div>
-        <!-- ---------------titre principal----------------------- -->
+        <!-- titre principal -->
         <div
           class="col-xs-15 col-sm-12 col-md-3 col-lg-4 d-flex flex-column align-items-center justify-content-center text-center"
         >
           <h1>Contact</h1>
         </div>
-        <!-- ----------------les logos et le boutton en haut a droite------ -->
+        <!--les logos et le boutton en haut a droite-->
         <div
           class="col-xs-15 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-start gap-3 mt-1"
         >
-          <svg class="mt-1"
+          <svg
+            class="mt-1"
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
@@ -56,7 +57,8 @@
             />
           </svg>
 
-          <svg class="mt-1"
+          <svg
+            class="mt-1"
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
@@ -73,85 +75,120 @@
         </div>
       </nav>
     </header>
-    <!-- -------------main avec le contenu----------------- -->
-    <main id="main" class="container mt-4 mb-4 ">
-        <div class="bord p-4">
+    <!-- main avec le contenu -->
+    <main id="main" class="container mt-4 mb-4">
+      <div class="bord p-4">
         <section class="container-fluid bg-light p-3">
-            <div class="row">
-                <form class="needs-validation" novalidate>
-  <div class="form-row">
-    <div class="col-md-4 mb-3">
-      <label for="validationTooltip01">First name</label>
-      <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" value="Mark" required>
-      <div class="valid-tooltip">
-        Looks good!
-      </div>
-    </div>
-    <div class="col-md-4 mb-3">
-      <label for="validationTooltip02">Last name</label>
-      <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="Otto" required>
-      <div class="valid-tooltip">
-        Looks good!
-      </div>
-    </div>
-    <div class="col-md-4 mb-3">
-      <label for="validationTooltipUsername">Username</label>
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
-        </div>
-        <input type="text" class="form-control" id="validationTooltipUsername" placeholder="Username" aria-describedby="validationTooltipUsernamePrepend" required>
-        <div class="invalid-tooltip">
-          Please choose a unique and valid username.
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="col-md-6 mb-3">
-      <label for="validationTooltip03">City</label>
-      <input type="text" class="form-control" id="validationTooltip03" placeholder="City" required>
-      <div class="invalid-tooltip">
-        Please provide a valid city.
-      </div>
-    </div>
-    <div class="col-md-3 mb-3">
-      <label for="validationTooltip04">State</label>
-      <input type="text" class="form-control" id="validationTooltip04" placeholder="State" required>
-      <div class="invalid-tooltip">
-        Please provide a valid state.
-      </div>
-    </div>
-    <div class="col-md-3 mb-3">
-      <label for="validationTooltip05">Zip</label>
-      <input type="text" class="form-control" id="validationTooltip05" placeholder="Zip" required>
-      <div class="invalid-tooltip">
-        Please provide a valid zip.
-      </div>
-    </div>
-  </div>
-  <button class="btn btn-primary" type="submit">Submit form</button>
-</form>
-            </div>
+          <div class="row">
+            <form class="needs-validation" novalidate>
+              <div class="form-row">
+                <div class="col-md-4 mb-3">
+                  <label for="validationTooltip01">First name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationTooltip01"
+                    placeholder="First name"
+                    value="Mark"
+                    required
+                  />
+                  <div class="valid-tooltip">Looks good!</div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="validationTooltip02">Last name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationTooltip02"
+                    placeholder="Last name"
+                    value="Otto"
+                    required
+                  />
+                  <div class="valid-tooltip">Looks good!</div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <label for="validationTooltipUsername">Username</label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span
+                        class="input-group-text"
+                        id="validationTooltipUsernamePrepend"
+                        >@</span
+                      >
+                    </div>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="validationTooltipUsername"
+                      placeholder="Username"
+                      aria-describedby="validationTooltipUsernamePrepend"
+                      required
+                    />
+                    <div class="invalid-tooltip">
+                      Please choose a unique and valid username.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="col-md-6 mb-3">
+                  <label for="validationTooltip03">City</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationTooltip03"
+                    placeholder="City"
+                    required
+                  />
+                  <div class="invalid-tooltip">
+                    Please provide a valid city.
+                  </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                  <label for="validationTooltip04">State</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationTooltip04"
+                    placeholder="State"
+                    required
+                  />
+                  <div class="invalid-tooltip">
+                    Please provide a valid state.
+                  </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                  <label for="validationTooltip05">Zip</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationTooltip05"
+                    placeholder="Zip"
+                    required
+                  />
+                  <div class="invalid-tooltip">Please provide a valid zip.</div>
+                </div>
+              </div>
+              <button class="btn btn-primary" type="submit">Submit form</button>
+            </form>
+          </div>
         </section>
-        </div>
-
+      </div>
     </main>
     <!-- section footer -->
     <footer class="container-fluid bg-dark text-center text-light">
-        <div class="row">
-            <div class="col mt-4">
-                <p>bonjour</p>
-            </div>
-            <div class="col mt-4">
-                <a href="">contact</a>
-            </div>
-            <div class="col mt-4">
-                <p>aurevoir</p>
-            </div>
+      <div class="row">
+        <div class="col mt-4">
+          <p>bonjour</p>
         </div>
-      
-    </footer class="container-fluid border border-black">
+        <div class="col mt-4">
+          <a href="">contact</a>
+        </div>
+        <div class="col mt-4">
+          <p>aurevoir</p>
+        </div>
+      </div>
+    </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
