--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -20,10 +20,10 @@
   </head>
 
   <body class="vh-100">
-    <!-- ---------barre de navigation et titre ---------------------->
+    <!-- barre de navigation et titre -->
     <header class="container-fluid h-25">
       <nav class="row h-100 d-flex justify-content-around">
-        <!---------------- div avec le menu en haut a gauche---------- -->
+        <!-- div avec le menu en haut a gauche -->
         <div
           class="col-xs-15 col-sm-12 col-md-5 col-lg-4 d-flex justify-content-around"
         >
@@ -33,18 +33,19 @@
           <a href="">Author</a>
           <a href="">Portal</a>
         </div>
-        <!-- ---------------titre principal----------------------- -->
+        <!-- titre principal -->
         <div
           class="col-xs-15 col-sm-12 col-md-3 col-lg-4 d-flex flex-column align-items-center justify-content-center text-center"
         >
           <h1>Ghost</h1>
           <p>Thoughts, Stories and Ideas</p>
         </div>
-        <!-- ----------------les logos et le boutton en haut a droite------ -->
+        <!-- les logos et le boutton en haut a droite -->
         <div
           class="col-xs-15 col-sm-12 col-md-4 col-lg-4 d-flex justify-content-center align-items-start gap-3 mt-1"
         >
-          <svg class="mt-1"
+          <svg
+            class="mt-1"
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
@@ -57,7 +58,8 @@
             />
           </svg>
 
-          <svg class="mt-1"
+          <svg
+            class="mt-1"
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
@@ -74,94 +76,114 @@
         </div>
       </nav>
     </header>
-    <!-- -------------main avec le contenu----------------- -->
+    <!-- main avec le contenu -->
     <main class="container px-5">
-
-        <!-- premiere ligne avec les 2 cadres -->
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-8 p-3">
-                    <img class="img-fluid" src="images/0.png" alt="">
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 p-3">
-                    <div  class="text-center h-100">
-                        <h4>Welcome</h4>
-                        <p>Welcome, it's great to have you here. We know that first impressions are important, so we've populated your new site with some initial getting started posts that will help you get familiar with everything in no time. </p>
-                    </div>
-                </div>
+      <!-- premiere ligne avec les 2 cadres -->
+      <section class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-8 p-3">
+            <img class="img-fluid" src="images/0.png" alt="" />
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 p-3">
+            <div class="text-center h-100">
+              <h4>Welcome</h4>
+              <p>
+                Welcome, it's great to have you here. We know that first
+                impressions are important, so we've populated your new site with
+                some initial getting started posts that will help you get
+                familiar with everything in no time.
+              </p>
             </div>
-        </section>
-         <!----- section 2---------------->
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-4 p-3">
-                    <img class="img-fluid" src="images/1.png" alt="" >
-                    <div  class="text-center">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab odio, fugit voluptate harum, animi atque nobis culpa at quae </p>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-6 col-md-4 p-3">
-                    <img class="img-fluid" src="images/2.png" alt="" >
-                    <div  class="text-center">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab odio, fugit voluptate harum, animi atque nobis culpa at quae </p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 p-3">
-                    <img class="img-fluid" src="images/3.png" alt="">
-                    <div  class="text-center">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab odio, fugit voluptate harum, animi atque nobis culpa at quae </p>
-                    </div>
-                </div>
+          </div>
+        </div>
+      </section>
+      <!-- section 2 -->
+      <section class="container-fluid">
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-md-4 p-3">
+            <img class="img-fluid" src="images/1.png" alt="" />
+            <div class="text-center">
+              <h4>Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab
+                odio, fugit voluptate harum, animi atque nobis culpa at quae
+              </p>
             </div>
-        </section>
-
-        <!-- section 3 -->
-
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-4 p-3">
-                    <img class="img-fluid" src="images/4.png" alt="" >
-                    <div  class="text-center">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab odio, fugit voluptate harum, animi atque nobis culpa at quae </p>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-6 col-md-4 p-3">
-                    <img class="img-fluid" src="images/5.png" alt="" >
-                    <div  class="text-center">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab odio, fugit voluptate harum, animi atque nobis culpa at quae </p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 p-3">
-                    <img class="img-fluid" src="images/6.png" alt="">
-                    <div  class="text-center">
-                        <h4>Title</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab odio, fugit voluptate harum, animi atque nobis culpa at quae </p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-4 p-3">
+            <img class="img-fluid" src="images/2.png" alt="" />
+            <div class="text-center">
+              <h4>Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab
+                odio, fugit voluptate harum, animi atque nobis culpa at quae
+              </p>
             </div>
-        </section>
-      
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 p-3">
+            <img class="img-fluid" src="images/3.png" alt="" />
+            <div class="text-center">
+              <h4>Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab
+                odio, fugit voluptate harum, animi atque nobis culpa at quae
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section 3 -->
+
+      <section class="container-fluid">
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-md-4 p-3">
+            <img class="img-fluid" src="images/4.png" alt="" />
+            <div class="text-center">
+              <h4>Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab
+                odio, fugit voluptate harum, animi atque nobis culpa at quae
+              </p>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-6 col-md-4 p-3">
+            <img class="img-fluid" src="images/5.png" alt="" />
+            <div class="text-center">
+              <h4>Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab
+                odio, fugit voluptate harum, animi atque nobis culpa at quae
+              </p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 p-3">
+            <img class="img-fluid" src="images/6.png" alt="" />
+            <div class="text-center">
+              <h4>Title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ab
+                odio, fugit voluptate harum, animi atque nobis culpa at quae
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- section footer -->
     <footer class="container-fluid bg-dark text-center text-light">
-        <div class="row">
-            <div class="col mt-4">
-                <p>2025</p>
-            </div>
-            <div class="col mt-4">
-                <a href="contact.html">contact</a>
-            </div>
-            <div class="col mt-4">
-                <p>BeWeb</p>
-            </div>
+      <div class="row">
+        <div class="col mt-4">
+          <p>2025</p>
         </div>
-      
-    </footer class="container-fluid border border-black">
+        <div class="col mt-4">
+          <a href="contact.html">contact</a>
+        </div>
+        <div class="col mt-4">
+          <p>BeWeb</p>
+        </div>
+      </div>
+    </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
