--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 
   <body class="vh-100">
     <!-- barre de navigation et titre -->
-    <header class="container-fluid h-25">
+    <header class="container-fluid h-25 text-light">
       <nav class="row h-100 d-flex justify-content-around">
         <!-- div avec le menu en haut a gauche -->
         <div
-          class="col-xs-15 col-sm-12 col-md-5 col-lg-4 d-flex justify-content-around"
+          class="col-xs-12 col-sm-12 col-md-5 col-lg-4 d-flex justify-content-around"
         >
-          <a href="">Home</a>
-          <a href="">About</a>
-          <a href="">Collection</a>
-          <a href="">Author</a>
-          <a href="">Portal</a>
+          <a class="text-decoration-none text-light" href="">Home</a>
+          <a class="text-decoration-none text-light" href="">About</a>
+          <a class="text-decoration-none text-light" href="">Collection</a>
+          <a class="text-decoration-none text-light" href="">Author</a>
+          <a class="text-decoration-none text-light" href="">Portal</a>
         </div>
         <!-- titre principal -->
         <div
-          class="col-xs-15 col-sm-12 col-md-3 col-lg-4 d-flex flex-column align-items-center justify-content-center text-center"
+          class="col-xs-12 col-sm-12 col-md-3 col-lg-4 d-flex flex-column align-items-center justify-content-center text-center"
         >
           <h1>Ghost</h1>
           <p>Thoughts, Stories and Ideas</p>
@@ -177,7 +177,9 @@
           <p>2025</p>
         </div>
         <div class="col mt-4">
-          <a href="contact.html">contact</a>
+          <a class="text-decoration-none text-light" href="contact.html"
+            >contact</a
+          >
         </div>
         <div class="col mt-4">
           <p>BeWeb</p>
