dernieres modifs contact

--- a/contact.html
+++ b/contact.html
@@ -21,17 +21,17 @@
 
   <body class="vh-100">
     <!-- barre de navigation et titre -->
-    <header class="container-fluid h-25">
+    <header class="container-fluid h-25 text-light">
       <nav class="row h-100 d-flex justify-content-around">
         <!-- div avec le menu en haut a gauche -->
         <div
           class="col-xs-15 col-sm-12 col-md-5 col-lg-4 d-flex justify-content-around"
         >
-          <a href="index.html">Home</a>
-          <a href="">About</a>
-          <a href="">Collection</a>
-          <a href="">Author</a>
-          <a href="">Portal</a>
+          <a class="text-decoration-none text-light" href="index.html">Home</a>
+          <a class="text-decoration-none text-light" href="">About</a>
+          <a class="text-decoration-none text-light" href="">Collection</a>
+          <a class="text-decoration-none text-light" href="">Author</a>
+          <a class="text-decoration-none text-light" href="">Portal</a>
         </div>
         <!-- titre principal -->
         <div
@@ -182,7 +182,7 @@
           <p>bonjour</p>
         </div>
         <div class="col mt-4">
-          <a href="">contact</a>
+          <a class="text-decoration-none text-light" href="">contact</a>
         </div>
         <div class="col mt-4">
           <p>aurevoir</p>
